--- a/app/src/main/res/layout/activity_3.xml
+++ b/app/src/main/res/layout/activity_3.xml
@@ -3,22 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/hardwoodfloor"
     android:layout_height="match_parent"
+    android:background="@drawable/hardwoodfloor"
     tools:context=".Activity3">
 
-    <EditText
-        android:id="@+id/infoEntry1"
-        android:layout_width="197dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="256dp"
-        android:ems="10"
-        android:inputType="number"
-        android:hint="Minutes"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
+        android:layout_marginLeft="27dp"
+        android:layout_marginBottom="137dp"
+        android:onClick="openData"
+        android:text="Check Players"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/infoEntry5" />
 
     <EditText
         android:id="@+id/infoEntry2"
@@ -28,8 +27,8 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="516dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="Steals"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,8 +40,8 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="348dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="Points"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,8 +53,8 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="432dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="Assists"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,10 +66,33 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="600dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="Rebounds"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/infoEntry1"
+        android:layout_width="197dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="256dp"
+        android:ems="10"
+        android:hint="Minutes"
+        android:inputType="number"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:onClick="submitInfo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/enterb" />
 
     <TextView
         android:id="@+id/textView"
@@ -83,14 +105,4 @@
         android:textSize="72sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="submitInfo"
-        android:layout_marginTop="140dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/enterb" />
 </androidx.constraintlayout.widget.ConstraintLayout>
