--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -29,4 +29,114 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textViewMinutes"
+        android:layout_width="177dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="37dp"
+        android:text="MINUTES"
+        android:textSize="36sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollPlayersView" />
+
+    <TextView
+        android:id="@+id/textViewPoints"
+        android:layout_width="153dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="368dp"
+        android:layout_marginLeft="368dp"
+        android:layout_marginTop="36dp"
+        android:text="POINTS"
+        android:textSize="36sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollPlayersView" />
+
+    <TextView
+        android:id="@+id/textViewAssists"
+        android:layout_width="153dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="212dp"
+        android:text="ASSISTS"
+        android:textSize="36sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollPlayersView" />
+
+    <TextView
+        android:id="@+id/textViewRebounds"
+        android:layout_width="195dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="368dp"
+        android:layout_marginLeft="368dp"
+        android:layout_marginTop="220dp"
+        android:text="REBOUNDS"
+        android:textSize="36sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollPlayersView" />
+
+    <TextView
+        android:id="@+id/textViewSteals"
+        android:layout_width="153dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="388dp"
+        android:text="STEALS"
+        android:textSize="36sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollPlayersView" />
+
+    <TextView
+        android:id="@+id/minuteDisplay"
+        android:layout_width="90dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginTop="29dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMinutes" />
+
+    <TextView
+        android:id="@+id/pointsDisplay"
+        android:layout_width="90dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="121dp"
+        android:layout_marginRight="121dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPoints" />
+
+    <TextView
+        android:id="@+id/assistsDisplay"
+        android:layout_width="90dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAssists" />
+
+    <TextView
+        android:id="@+id/reboundsDisplay"
+        android:layout_width="90dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="111dp"
+        android:layout_marginRight="111dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewRebounds" />
+
+    <TextView
+        android:id="@+id/stealsDisplay"
+        android:layout_width="90dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:layout_marginTop="34dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSteals" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
