--- a/app/src/main/res/layout/activity_3.xml
+++ b/app/src/main/res/layout/activity_3.xml
@@ -113,6 +113,7 @@
         android:layout_marginTop="164dp"
         android:layout_marginEnd="115dp"
         android:layout_marginRight="115dp"
+        android:onClick="openData"
         android:text="Open Data"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
