Partial Weekend Work

--- a/app/src/main/res/layout/activity_3.xml
+++ b/app/src/main/res/layout/activity_3.xml
@@ -5,29 +5,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/hardwoodfloor"
-    tools:context=".Activity3">
+    tools:context=".DisplayPlayerPage">
 
     <Button
         android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="164dp"
+        android:layout_marginEnd="115dp"
+        android:layout_marginRight="115dp"
+        android:onClick="openData"
+        android:text="Open Data"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginLeft="27dp"
-        android:layout_marginBottom="137dp"
-        android:onClick="openData"
-        android:text="Check Players"
+        android:layout_marginStart="88dp"
+        android:layout_marginLeft="88dp"
+        android:layout_marginEnd="180dp"
+        android:layout_marginRight="180dp"
+        android:layout_marginBottom="89dp"
+        android:onClick="playerPage"
+        android:text="Go Back To Player Page"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/infoEntry5" />
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/infoEntry2"
+        android:id="@+id/infoEntry0"
         android:layout_width="197dp"
         android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="516dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="248dp"
         android:ems="10"
-        android:hint="Steals"
+        android:hint="Name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/infoEntry1"
+        android:layout_width="197dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="332dp"
+        android:ems="10"
+        android:hint="Minutes"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,9 +64,9 @@
         android:id="@+id/infoEntry3"
         android:layout_width="197dp"
         android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="348dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="424dp"
         android:ems="10"
         android:hint="Points"
         android:inputType="number"
@@ -49,9 +77,9 @@
         android:id="@+id/infoEntry4"
         android:layout_width="197dp"
         android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="432dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="508dp"
         android:ems="10"
         android:hint="Assists"
         android:inputType="number"
@@ -62,9 +90,9 @@
         android:id="@+id/infoEntry5"
         android:layout_width="197dp"
         android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="600dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="676dp"
         android:ems="10"
         android:hint="Rebounds"
         android:inputType="number"
@@ -72,14 +100,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/infoEntry1"
+        android:id="@+id/infoEntry2"
         android:layout_width="197dp"
         android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="256dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="592dp"
         android:ems="10"
-        android:hint="Minutes"
+        android:hint="Steals"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
