--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/hardwoodfloor"
     android:layout_height="match_parent"
+    android:background="@drawable/hardwoodfloor"
     tools:context=".DisplayPlayerPage">
 
     <Button
@@ -19,13 +19,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="148dp"
+        android:layout_height="129dp"
+        android:layout_marginEnd="396dp"
+        android:layout_marginRight="396dp"
+        android:layout_marginBottom="38dp"
+        android:background="@drawable/backarrow"
+        android:onClick="homePage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollPlayersView" />
+
     <ListView
         android:id="@+id/scrollPlayersView"
         android:layout_width="414dp"
-        android:layout_height="254dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="28dp"
+        android:layout_marginBottom="568dp"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
