--- a/app/src/main/res/layout/activity_3.xml
+++ b/app/src/main/res/layout/activity_3.xml
@@ -7,13 +7,14 @@
     android:background="@drawable/hardwoodfloor"
     tools:context=".DisplayPlayerPage">
 
+
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="90dp"
         android:layout_marginTop="164dp"
-        android:layout_marginEnd="115dp"
-        android:layout_marginRight="115dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="33dp"
         android:onClick="openData"
         android:text="Open Data"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,18 +23,19 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginRight="180dp"
-        android:layout_marginBottom="89dp"
+        android:layout_width="145dp"
+        android:layout_height="132dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginLeft="53dp"
+        android:layout_marginEnd="182dp"
+        android:layout_marginRight="182dp"
+        android:layout_marginBottom="80dp"
+        android:background="@drawable/backarrow"
         android:onClick="playerPage"
-        android:text="Go Back To Player Page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
         android:id="@+id/infoEntry0"
@@ -116,10 +118,12 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="268dp"
+        android:layout_marginBottom="170dp"
         android:onClick="submitInfo"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/enterb" />
 
     <TextView
